logs/gdiff_2d_error.log
The following values were not passed to `accelerate launch` and had defaults used instead:
	`--num_processes` was set to a value of `4`
		More than one GPU was found, enabling multi-GPU training.
		If this was unintended please pass in `--num_processes=1`.
	`--num_machines` was set to a value of `1`
	`--mixed_precision` was set to a value of `'no'`
	`--dynamo_backend` was set to a value of `'no'`
To avoid this warning pass in values for each of the problematic parameters or run `accelerate config`.
Traceback (most recent call last):
Traceback (most recent call last):
Traceback (most recent call last):
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 196, in _run_module_as_main
Traceback (most recent call last):
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 196, in _run_module_as_main
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 196, in _run_module_as_main
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 196, in _run_module_as_main
    return _run_code(code, main_globals, None,
      File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 86, in _run_code
return _run_code(code, main_globals, None,
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 86, in _run_code
    return _run_code(code, main_globals, None,
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 86, in _run_code
    return _run_code(code, main_globals, None,
  File "/home/am3353/python/Python-3.10.12/Lib/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/home/am3353/Gibbs-Diff/modules/main_run.py", line 42, in <module>
    exec(code, run_globals)
      File "/home/am3353/Gibbs-Diff/modules/main_run.py", line 42, in <module>
    exec(code, run_globals)exec(code, run_globals)

  File "/home/am3353/Gibbs-Diff/modules/main_run.py", line 42, in <module>
  File "/home/am3353/Gibbs-Diff/modules/main_run.py", line 42, in <module>
    from .comp.two_d.diffusion_2d_cosmo import GibbsDiff2D_cosmo
  File "/home/am3353/Gibbs-Diff/modules/comp/two_d/diffusion_2d_cosmo.py", line 28, in <module>
    from .comp.two_d.diffusion_2d_cosmo import GibbsDiff2D_cosmo
      File "/home/am3353/Gibbs-Diff/modules/comp/two_d/diffusion_2d_cosmo.py", line 28, in <module>
from .comp.two_d.diffusion_2d_cosmo import GibbsDiff2D_cosmo
  File "/home/am3353/Gibbs-Diff/modules/comp/two_d/diffusion_2d_cosmo.py", line 28, in <module>
    from ...utils.cosmo_create import get_cmb_noise_batch    
from .comp.two_d.diffusion_2d_cosmo import GibbsDiff2D_cosmo
  File "/home/am3353/Gibbs-Diff/modules/comp/two_d/diffusion_2d_cosmo.py", line 28, in <module>
  File "/home/am3353/Gibbs-Diff/modules/utils/cosmo_create.py", line 190
    def generate_cmb_map(cl_tt, sigma_cmb_amp==None, seed=None):
                                             ^^
SyntaxError: invalid syntax
    from ...utils.cosmo_create import get_cmb_noise_batch
  File "/home/am3353/Gibbs-Diff/modules/utils/cosmo_create.py", line 190
    def generate_cmb_map(cl_tt, sigma_cmb_amp==None, seed=None):
                          from ...utils.cosmo_create import get_cmb_noise_batch 
     from ...utils.cosmo_create import get_cmb_noise_batch 
   File "/home/am3353/Gibbs-Diff/modules/utils/cosmo_create.py", line 190
      def generate_cmb_map(cl_tt, sigma_cmb_amp==None, seed=None):
       File "/home/am3353/Gibbs-Diff/modules/utils/cosmo_create.py", line 190
        def generate_cmb_map(cl_tt, sigma_cmb_amp==None, seed=None):
                                             ^  ^  
  SyntaxError  :   invalid syntax  
                                       ^ ^ 
^SyntaxError^: 
invalid syntaxSyntaxError
: invalid syntax
E0611 12:16:16.180000 481351 torch/distributed/elastic/multiprocessing/api.py:869] failed (exitcode: 1) local_rank: 0 (pid: 481368) of binary: /home/am3353/Gibbs-Diff/gdiff-env-csd3/bin/python
Traceback (most recent call last):
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/bin/accelerate", line 8, in <module>
    sys.exit(main())
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/lib/python3.10/site-packages/accelerate/commands/accelerate_cli.py", line 50, in main
    args.func(args)
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/lib/python3.10/site-packages/accelerate/commands/launch.py", line 1204, in launch_command
    multi_gpu_launcher(args)
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/lib/python3.10/site-packages/accelerate/commands/launch.py", line 825, in multi_gpu_launcher
    distrib_run.run(args)
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/lib/python3.10/site-packages/torch/distributed/run.py", line 909, in run
    elastic_launch(
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/lib/python3.10/site-packages/torch/distributed/launcher/api.py", line 138, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/home/am3353/Gibbs-Diff/gdiff-env-csd3/lib/python3.10/site-packages/torch/distributed/launcher/api.py", line 269, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
modules.main_run FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2025-06-11_12:16:16
  host      : gpu-q-47.data.cluster
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 481369)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2025-06-11_12:16:16
  host      : gpu-q-47.data.cluster
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 481370)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2025-06-11_12:16:16
  host      : gpu-q-47.data.cluster
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 481371)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2025-06-11_12:16:16
  host      : gpu-q-47.data.cluster
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 481368)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
